--- a/client/index.html
+++ b/client/index.html
@@ -104,7 +104,7 @@
 			<div id="blue-score" class="score" style="width:130px;height:100px;overflow-y:auto;border: 2px; border-style:solid; display: inline-block ;background: #1874cd"></div>
 			<button id="pass" onclick="pass();">PASS</button>
                         <div id="timer"></div>
-                        <form id="chat-form" >
+                        <form id="chat-form" autocomplete="off" >
 				<input id="chat-input" type="text" style="width:500px"></input>
 			</form>
 		</div>
